Removed "Formula" from textView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -266,6 +266,6 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#F1F1F1"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="Formula" />
+        android:text="" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
